SF Primes/src/objects/Campaign_Member_Status__c.object
<CustomObject>
    <description>List of possible statuses for account based campaigns</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Member Status</relationshipLabel>
        <relationshipName>R00N40000001m59nEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt Consolidation ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Default_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Status?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indicates_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indicates Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Campaign Member Status</label>
    <nameField>
        <label>Campaign Member Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Member Status</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>